fixed color of footer p text in dark mode.

--- a/styles/sass/partials/_media-queries.scss
+++ b/styles/sass/partials/_media-queries.scss
@@ -761,7 +761,7 @@
 
   footer,
   footer p {
-    color: $black;
+    color: $white;
   }
 
   footer {
